tests/errors/comprehensive/E5009_break_outside_loop.ez
/*
 * Error Test: E5009 - break-outside-loop
 * Expected: "break statement outside loop"
 */

do main() {
    break  // break outside of any loop
}
